# chatmem0

./: README.md
chatmem0-extension/: .eslintrc.json  .gitignore  INSTALL.md  README.md  manifest.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
chatmem0-extension/backend/: Dockerfile  OPTIMIZATION_SUMMARY.md  README.md  dev.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py  run_backend.sh  start.sh
chatmem0-extension/backend/app/: main.py
chatmem0-extension/backend/app/api/: conversations.py
chatmem0-extension/backend/app/auth/: auth.py
chatmem0-extension/backend/app/core/: config.py  cors.py
chatmem0-extension/backend/app/db/: database.py  migrations.py
chatmem0-extension/backend/app/models/: conversation.py
chatmem0-extension/backend/app/schemas/: conversation.py
chatmem0-extension/development_docs/: README.md  architecture.md  ideas.md  quick-start.md  roadmap.md
chatmem0-extension/development_docs/dev_summary/: IMPLEMENTATION_SUMMARY.md
chatmem0-extension/src/background/: DataProcessingEngine.ts  StorageManager.ts  SyncManager.ts  index.ts
chatmem0-extension/src/common/: BaseExtractor.ts  utils.ts
chatmem0-extension/src/content/: chatgpt.ts  claude.ts  tongyi.ts  yiyan.ts
chatmem0-extension/src/popup/: index.ts  popup.css  popup.html
chatmem0-extension/src/types/: index.ts
